<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AACF</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_quit">Quit</string>

    <string name="pref_summary">Settings</string>
    <string name="pref_api_category_base">Connection</string>
    <string name="pref_appearance_category_base">Appearance</string>

    <string name="pref_api_title">API Access</string>
    <string name="pref_api_summary">URL and API authentication token</string>

    <string name="pref_general_title">General</string>
    <string name="pref_general_summary">Appearance and behaviour</string>

    <string name="pref_api_token_title">API Auth Token</string>
    <string name="pref_api_token_summary">Paste your token here</string>
    <string name="pref_api_url_title">URL of ActiveCollab</string>
    <string name="pref_api_url_summary">https://ac.company.com/api.php</string>

    <string name="pref_general_theme_title">Theme</string>
    <string name="pref_general_theme_summary">Select a theme</string>

    <string name="const_pref_api_token">pref_key_api_token</string>
    <string name="const_pref_api_url">pref_key_api_url</string>
    <string name="const_pref_theme_select">pref_key_theme_select</string>

    <string name="content_description_avatar">loading</string>

    <string name="global_msg_error_request">Error during request:</string>
    <string name="global_msg_info_loaded_messages">Messages updated!^1</string>
    <string name="global_msg_info_saved_setting">Setting updated</string>
    <string name="global_msg_info_posted_message">Message posted!</string>
    <string name="global_msg_info_no_replies">Nothing to see here :/</string>

    <string name="global_alert_submit">OK</string>
    <string name="global_alert_cancel">Cancel</string>

    <string name="form_post_update_title">Found something? Share it!</string>

</resources>
